<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_redCross_username"
                style="@style/ImageViewCross" />

            <EditText
                android:id="@+id/et_username"
                style="@style/EditTextField"
                android:hint="@string/username" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_redCross_password1"
                style="@style/ImageViewCross"/>

            <EditText
                android:id="@+id/et_password"
                android:hint="@string/password"
                style="@style/EditTextField.Password" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_redCross_password2"
                style="@style/ImageViewCross"/>

            <EditText
                android:id="@+id/et_confirm_password"
                style="@style/EditTextField.Password"
                android:hint="@string/password_confirm" />

        </LinearLayout>

        <RadioGroup
            android:id="@+id/rg_Sex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/rb_Male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marginTop"
                android:checked="true"
                android:text="@string/male" />

            <RadioButton
                android:id="@+id/rb_Female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marginTop"
                android:text="@string/female" />

        </RadioGroup>

        <Spinner
            android:id="@+id/spinner_Country"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginTop"
            android:prompt="@string/countries"/>

        <TextView
            android:id="@+id/view_sign_up"
            style="@style/Buttons"
            android:layout_marginTop="@dimen/button_marginTop"
            android:background="@drawable/btn_red"
            android:text="@string/sign_up" />

        <TextView
            android:id="@+id/view_show_users"
            style="@style/Buttons"
            android:layout_marginTop="@dimen/button_marginTop"
            android:background="@drawable/btn_red"
            android:text="@string/show_users" />

    </LinearLayout>

</ScrollView>